samples/_failures_safe/1761369259_a38971_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c3a29c6.c: In function ‘main’:
./samples/SAFE/__tmp_3c3a29c6.c:155:16: error: missing terminating " character
  155 |         printf("1. Matrix Addition\n
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3c3a29c6.c:155:9: error: expected expression at end of input
  155 |         printf("1. Matrix Addition\n
      |         ^~~~~~
./samples/SAFE/__tmp_3c3a29c6.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c3a29c6.c:155:9: error: expected declaration or statement at end of input
